fixed table rows in tab and desk. still need to do out of stock colorway, better align content to columns, add hover colors, clean up code to be more dry

--- a/src/components/InventoryItem/InventoryItem.scss
+++ b/src/components/InventoryItem/InventoryItem.scss
@@ -31,6 +31,11 @@
         align-items: flex-start;
         justify-content: center;
         width: 50%;
+        @include tablet{
+            flex-direction: row;
+            justify-content: space-between;
+            width: 36%;
+        }
        
         
     }
@@ -84,15 +89,25 @@
         display: flex;
         flex-direction: column;
         align-items: flex-start;
-        width: 50%;  
+        width: 50%; 
+        @include tablet{
+            flex-direction: row;
+            justify-content: space-between;
+            width: 56%;
+        }
     }
-    
+
     &__icons{
         display: flex;
         justify-content: space-between;
         padding: 1rem;
-        width: 4rem;
-        height: 4rem;
+        width: 3.2rem;
+        height: 3.2rem;
+        @include tablet{
+            align-items: flex-start;
+            justify-content: center;
+            padding: 0 .5rem;
+        }
         
     }
 
